sunvox_lib/sunvox.h

/*
   sv_new_module() - create a new module;
   sv_remove_module() - remove selected module;
   sv_connect_module() - connect the source to the destination;
   sv_disconnect_module() - disconnect the source from the destination;
   sv_load_module() - load a module or sample; supported file formats: sunsynth, xi, wav, aiff;
                      return value: new module number or negative value in case of some error;
   sv_load_module_from_memory() - load a module or sample from the memory block;
   sv_sampler_load() - load a sample to already created Sampler; to replace the whole sampler - set sample_slot to -1;
   sv_sampler_load_from_memory() - load a sample from the memory block;
*/
int sv_new_module( int slot, const char* type, const char* name, int x, int y, int z ) SUNVOX_FN_ATTR; /* USE LOCK/UNLOCK! */
int sv_remove_module( int slot, int mod_num ) SUNVOX_FN_ATTR; /* USE LOCK/UNLOCK! */
int sv_connect_module( int slot, int source, int destination ) SUNVOX_FN_ATTR; /* USE LOCK/UNLOCK! */
int sv_disconnect_module( int slot, int source, int destination ) SUNVOX_FN_ATTR; /* USE LOCK/UNLOCK! */
int sv_load_module( int slot, const char* file_name, int x, int y, int z ) SUNVOX_FN_ATTR;
int sv_load_module_from_memory( int slot, void* data, uint32_t data_size, int x, int y, int z ) SUNVOX_FN_ATTR;
int sv_sampler_load( int slot, int sampler_module, const char* file_name, int sample_slot ) SUNVOX_FN_ATTR;
int sv_sampler_load_from_memory( int slot, int sampler_module, void* data, uint32_t data_size, int sample_slot ) SUNVOX_FN_ATTR;
/*
   sv_get_number_of_modules() - get the number of module slots (not the actual number of modules).
   The slot can be empty or it can contain a module.
   Here is the code to determine that the module slot X is not empty: ( sv_get_module_flags( slot, X ) & SV_MODULE_FLAG_EXISTS ) != 0;
*/
int sv_get_number_of_modules( int slot ) SUNVOX_FN_ATTR;
/*
   sv_find_module() - find a module by name;
   return value: module number or -1 (if not found);
*/
int sv_find_module( int slot, const char* name ) SUNVOX_FN_ATTR;
/*
*/
uint32_t sv_get_module_flags( int slot, int mod_num ) SUNVOX_FN_ATTR; /* SV_MODULE_FLAG_xxx */
/*
   sv_get_module_inputs(), sv_get_module_outputs() - 
   get pointers to the int[] arrays with the input/output links.
   Number of input links = ( module_flags & SV_MODULE_INPUTS_MASK ) >> SV_MODULE_INPUTS_OFF.
   Number of output links = ( module_flags & SV_MODULE_OUTPUTS_MASK ) >> SV_MODULE_OUTPUTS_OFF.
   (this is not the actual number of connections: some links may be empty (value = -1))
*/
int* sv_get_module_inputs( int slot, int mod_num ) SUNVOX_FN_ATTR;
int* sv_get_module_outputs( int slot, int mod_num ) SUNVOX_FN_ATTR;
/*
*/
const char* sv_get_module_name( int slot, int mod_num ) SUNVOX_FN_ATTR;
/*
   sv_get_module_xy() - get module XY coordinates packed in a single uint32 value:
   ( x & 0xFFFF ) | ( ( y & 0xFFFF ) << 16 )
   Normal working area: 0x0 ... 1024x1024
   Center: 512x512
   Use SV_GET_MODULE_XY() macro to unpack X and Y.
*/
uint32_t sv_get_module_xy( int slot, int mod_num ) SUNVOX_FN_ATTR;
/*
   sv_get_module_color() - get module color in the following format: 0xBBGGRR
*/
int sv_get_module_color( int slot, int mod_num ) SUNVOX_FN_ATTR;
/*
   sv_get_module_finetune() - get the relative note and finetune of the module;
   return value: ( finetune & 0xFFFF ) | ( ( relative_note & 0xFFFF ) << 16 ).
   Use SV_GET_MODULE_FINETUNE() macro to unpack finetune and relative_note.
*/
uint32_t sv_get_module_finetune( int slot, int mod_num ) SUNVOX_FN_ATTR;
/*
   sv_get_module_scope2() return value = received number of samples (may be less or equal to samples_to_read).
   Example:
     int16_t buf[ 1024 ];
     int received = sv_get_module_scope2( slot, mod_num, 0, buf, 1024 );
     //buf[ 0 ] = value of the first sample (-32768...32767);
     //buf[ 1 ] = value of the second sample;
     //...
     //buf[ received - 1 ] = value of the last received sample;
*/
uint32_t sv_get_module_scope2( int slot, int mod_num, int channel, int16_t* dest_buf, uint32_t samples_to_read ) SUNVOX_FN_ATTR;
/*
   sv_module_curve() - access to the curve values of the specified module
   Parameters:
     slot;
     mod_num - module number;
     curve_num - curve number;
     data - destination or source buffer;
     len - number of items to read/write;
     w - read (0) or write (1).
   return value: number of items processed successfully.

   Available curves (Y=CURVE[X]):
     MultiSynth:
       0 - X = note (0..127); Y = velocity (0..1); 128 items;
       1 - X = velocity (0..256); Y = velocity (0..1); 257 items;
       2 - X = note (0..127); Y = pitch (0..1); 128 items;
           pitch range: 0 ... 16384/65535 (note0) ... 49152/65535 (note128) ... 1; semitone = 256/65535;
     WaveShaper:
       0 - X = input (0..255); Y = output (0..1); 256 items;
     MultiCtl:
       0 - X = input (0..256); Y = output (0..1); 257 items;
     Analog Generator, Generator:
       0 - X = drawn waveform sample number (0..31); Y = volume (-1..1); 32 items;
*/
int sv_module_curve( int slot, int mod_num, int curve_num, float* data, int len, int w ) SUNVOX_FN_ATTR;
/*
*/
int sv_get_number_of_module_ctls( int slot, int mod_num ) SUNVOX_FN_ATTR;
const char* sv_get_module_ctl_name( int slot, int mod_num, int ctl_num ) SUNVOX_FN_ATTR;
int sv_get_module_ctl_value( int slot, int mod_num, int ctl_num, int scaled ) SUNVOX_FN_ATTR;
/*
   sv_get_number_of_patterns() - get the number of pattern slots (not the actual number of patterns).
   The slot can be empty or it can contain a pattern.
   Here is the code to determine that the pattern slot X is not empty: sv_get_pattern_lines( slot, X ) > 0;
*/
int sv_get_number_of_patterns( int slot ) SUNVOX_FN_ATTR;
/*
   sv_find_pattern() - find a pattern by name;
   return value: pattern number or -1 (if not found);
*/
int sv_find_pattern( int slot, const char* name ) SUNVOX_FN_ATTR;
/*
   sv_get_pattern_xxxx - get pattern information
   x - time (line number);
   y - vertical position on timeline;
   tracks - number of pattern tracks;
   lines - number of pattern lines;
   name - pattern name or NULL;
*/
int sv_get_pattern_x( int slot, int pat_num ) SUNVOX_FN_ATTR;