lib/src/libsunvox_generated_bindings.dart


  int sv_new_module(
    int slot,
    ffi.Pointer<ffi.Int8> type,
    ffi.Pointer<ffi.Int8> name,
    int x,
    int y,
    int z,
  ) {
    return _sv_new_module(
      slot,
      type,
      name,
      x,
      y,
      z,
    );
  }

  late final _sv_new_modulePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Int32,
              ffi.Pointer<ffi.Int8>,
              ffi.Pointer<ffi.Int8>,
              ffi.Int32,
              ffi.Int32,
              ffi.Int32)>>('sv_new_module');
  late final _sv_new_module = _sv_new_modulePtr.asFunction<
      int Function(
          int, ffi.Pointer<ffi.Int8>, ffi.Pointer<ffi.Int8>, int, int, int)>();

  int sv_remove_module(
    int slot,
    int mod_num,
  ) {
    return _sv_remove_module(
      slot,
      mod_num,
    );
  }

  late final _sv_remove_modulePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32, ffi.Int32)>>(
          'sv_remove_module');
  late final _sv_remove_module =
      _sv_remove_modulePtr.asFunction<int Function(int, int)>();

  int sv_connect_module(
    int slot,
    int source,
    int destination,
  ) {
    return _sv_connect_module(
      slot,
      source,
      destination,
    );
  }

  late final _sv_connect_modulePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Int32, ffi.Int32, ffi.Int32)>>('sv_connect_module');
  late final _sv_connect_module =
      _sv_connect_modulePtr.asFunction<int Function(int, int, int)>();

  int sv_disconnect_module(
    int slot,
    int source,
    int destination,
  ) {
    return _sv_disconnect_module(
      slot,
      source,
      destination,
    );
  }

  late final _sv_disconnect_modulePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Int32, ffi.Int32, ffi.Int32)>>('sv_disconnect_module');
  late final _sv_disconnect_module =
      _sv_disconnect_modulePtr.asFunction<int Function(int, int, int)>();

  int sv_load_module(
    int slot,
    ffi.Pointer<ffi.Int8> file_name,
    int x,
    int y,
    int z,
  ) {
    return _sv_load_module(
      slot,
      file_name,
      x,
      y,
      z,
    );
  }

  late final _sv_load_modulePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Int32, ffi.Pointer<ffi.Int8>, ffi.Int32,
              ffi.Int32, ffi.Int32)>>('sv_load_module');
  late final _sv_load_module = _sv_load_modulePtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Int8>, int, int, int)>();

  int sv_load_module_from_memory(
    int slot,
    ffi.Pointer<ffi.Void> data,
    int data_size,
    int x,
    int y,
    int z,
  ) {
    return _sv_load_module_from_memory(
      slot,
      data,
      data_size,
      x,
      y,
      z,
    );
  }

  late final _sv_load_module_from_memoryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Int32, ffi.Pointer<ffi.Void>, ffi.Uint32,
              ffi.Int32, ffi.Int32, ffi.Int32)>>('sv_load_module_from_memory');
  late final _sv_load_module_from_memory =
      _sv_load_module_from_memoryPtr.asFunction<
          int Function(int, ffi.Pointer<ffi.Void>, int, int, int, int)>();

  int sv_sampler_load(
    int slot,
    int sampler_module,
    ffi.Pointer<ffi.Int8> file_name,
    int sample_slot,
  ) {
    return _sv_sampler_load(
      slot,
      sampler_module,
      file_name,
      sample_slot,
    );
  }

  late final _sv_sampler_loadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Int32, ffi.Int32, ffi.Pointer<ffi.Int8>,
              ffi.Int32)>>('sv_sampler_load');
  late final _sv_sampler_load = _sv_sampler_loadPtr
      .asFunction<int Function(int, int, ffi.Pointer<ffi.Int8>, int)>();

  int sv_sampler_load_from_memory(
    int slot,
    int sampler_module,
    ffi.Pointer<ffi.Void> data,
    int data_size,
    int sample_slot,
  ) {
    return _sv_sampler_load_from_memory(
      slot,
      sampler_module,
      data,
      data_size,
      sample_slot,
    );
  }

  late final _sv_sampler_load_from_memoryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Int32, ffi.Int32, ffi.Pointer<ffi.Void>,
              ffi.Uint32, ffi.Int32)>>('sv_sampler_load_from_memory');
  late final _sv_sampler_load_from_memory = _sv_sampler_load_from_memoryPtr
      .asFunction<int Function(int, int, ffi.Pointer<ffi.Void>, int, int)>();

  int sv_get_number_of_modules(
    int slot,
  ) {
    return _sv_get_number_of_modules(
      slot,
    );
  }

  late final _sv_get_number_of_modulesPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'sv_get_number_of_modules');
  late final _sv_get_number_of_modules =
      _sv_get_number_of_modulesPtr.asFunction<int Function(int)>();

  int sv_find_module(
    int slot,
    ffi.Pointer<ffi.Int8> name,
  ) {
    return _sv_find_module(
      slot,
      name,
    );
  }

  late final _sv_find_modulePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Int32, ffi.Pointer<ffi.Int8>)>>('sv_find_module');
  late final _sv_find_module =
      _sv_find_modulePtr.asFunction<int Function(int, ffi.Pointer<ffi.Int8>)>();

  int sv_get_module_flags(
    int slot,
    int mod_num,
  ) {
    return _sv_get_module_flags(
      slot,
      mod_num,
    );
  }

  late final _sv_get_module_flagsPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Int32, ffi.Int32)>>(
          'sv_get_module_flags');
  late final _sv_get_module_flags =
      _sv_get_module_flagsPtr.asFunction<int Function(int, int)>();

  ffi.Pointer<ffi.Int32> sv_get_module_inputs(
    int slot,
    int mod_num,
  ) {
    return _sv_get_module_inputs(
      slot,
      mod_num,
    );
  }

  late final _sv_get_module_inputsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Int32> Function(
              ffi.Int32, ffi.Int32)>>('sv_get_module_inputs');
  late final _sv_get_module_inputs = _sv_get_module_inputsPtr
      .asFunction<ffi.Pointer<ffi.Int32> Function(int, int)>();

  ffi.Pointer<ffi.Int32> sv_get_module_outputs(
    int slot,
    int mod_num,
  ) {
    return _sv_get_module_outputs(
      slot,
      mod_num,
    );
  }

  late final _sv_get_module_outputsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Int32> Function(
              ffi.Int32, ffi.Int32)>>('sv_get_module_outputs');
  late final _sv_get_module_outputs = _sv_get_module_outputsPtr
      .asFunction<ffi.Pointer<ffi.Int32> Function(int, int)>();

  ffi.Pointer<ffi.Int8> sv_get_module_name(
    int slot,
    int mod_num,
  ) {
    return _sv_get_module_name(
      slot,
      mod_num,
    );
  }

  late final _sv_get_module_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Int8> Function(
              ffi.Int32, ffi.Int32)>>('sv_get_module_name');
  late final _sv_get_module_name = _sv_get_module_namePtr
      .asFunction<ffi.Pointer<ffi.Int8> Function(int, int)>();

  int sv_get_module_xy(
    int slot,
    int mod_num,
  ) {
    return _sv_get_module_xy(
      slot,
      mod_num,
    );
  }

  late final _sv_get_module_xyPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Int32, ffi.Int32)>>(
          'sv_get_module_xy');
  late final _sv_get_module_xy =
      _sv_get_module_xyPtr.asFunction<int Function(int, int)>();

  int sv_get_module_color(
    int slot,
    int mod_num,
  ) {
    return _sv_get_module_color(
      slot,
      mod_num,
    );
  }

  late final _sv_get_module_colorPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32, ffi.Int32)>>(
          'sv_get_module_color');
  late final _sv_get_module_color =
      _sv_get_module_colorPtr.asFunction<int Function(int, int)>();

  int sv_get_module_finetune(
    int slot,
    int mod_num,
  ) {
    return _sv_get_module_finetune(
      slot,
      mod_num,
    );
  }

  late final _sv_get_module_finetunePtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Int32, ffi.Int32)>>(
          'sv_get_module_finetune');
  late final _sv_get_module_finetune =
      _sv_get_module_finetunePtr.asFunction<int Function(int, int)>();

  int sv_get_module_scope2(
    int slot,
    int mod_num,
    int channel,
    ffi.Pointer<ffi.Int16> dest_buf,
    int samples_to_read,
  ) {
    return _sv_get_module_scope2(
      slot,
      mod_num,
      channel,
      dest_buf,
      samples_to_read,
    );
  }

  late final _sv_get_module_scope2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Int32, ffi.Int32, ffi.Int32,
              ffi.Pointer<ffi.Int16>, ffi.Uint32)>>('sv_get_module_scope2');
  late final _sv_get_module_scope2 = _sv_get_module_scope2Ptr
      .asFunction<int Function(int, int, int, ffi.Pointer<ffi.Int16>, int)>();

  int sv_module_curve(
    int slot,
    int mod_num,
    int curve_num,
    ffi.Pointer<ffi.Float> data,
    int len,
    int w,
  ) {
    return _sv_module_curve(
      slot,
      mod_num,
      curve_num,
      data,
      len,
      w,
    );
  }

  late final _sv_module_curvePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Int32,
              ffi.Int32,
              ffi.Int32,
              ffi.Pointer<ffi.Float>,
              ffi.Int32,
              ffi.Int32)>>('sv_module_curve');
  late final _sv_module_curve = _sv_module_curvePtr.asFunction<
      int Function(int, int, int, ffi.Pointer<ffi.Float>, int, int)>();

  int sv_get_number_of_module_ctls(
    int slot,
    int mod_num,
  ) {
    return _sv_get_number_of_module_ctls(
      slot,
      mod_num,
    );
  }

  late final _sv_get_number_of_module_ctlsPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32, ffi.Int32)>>(
          'sv_get_number_of_module_ctls');
  late final _sv_get_number_of_module_ctls =
      _sv_get_number_of_module_ctlsPtr.asFunction<int Function(int, int)>();

  ffi.Pointer<ffi.Int8> sv_get_module_ctl_name(
    int slot,
    int mod_num,
    int ctl_num,
  ) {
    return _sv_get_module_ctl_name(
      slot,
      mod_num,
      ctl_num,
    );
  }

  late final _sv_get_module_ctl_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Int8> Function(
              ffi.Int32, ffi.Int32, ffi.Int32)>>('sv_get_module_ctl_name');
  late final _sv_get_module_ctl_name = _sv_get_module_ctl_namePtr
      .asFunction<ffi.Pointer<ffi.Int8> Function(int, int, int)>();

  int sv_get_module_ctl_value(
    int slot,
    int mod_num,
    int ctl_num,
    int scaled,
  ) {
    return _sv_get_module_ctl_value(
      slot,
      mod_num,
      ctl_num,
      scaled,
    );
  }

  late final _sv_get_module_ctl_valuePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Int32, ffi.Int32, ffi.Int32,
              ffi.Int32)>>('sv_get_module_ctl_value');
  late final _sv_get_module_ctl_value = _sv_get_module_ctl_valuePtr
      .asFunction<int Function(int, int, int, int)>();

  int sv_get_number_of_patterns(
    int slot,
  ) {
    return _sv_get_number_of_patterns(
      slot,
    );
  }

  late final _sv_get_number_of_patternsPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'sv_get_number_of_patterns');
  late final _sv_get_number_of_patterns =
      _sv_get_number_of_patternsPtr.asFunction<int Function(int)>();

  int sv_find_pattern(
    int slot,
    ffi.Pointer<ffi.Int8> name,
  ) {
    return _sv_find_pattern(
      slot,
      name,
    );
  }

  late final _sv_find_patternPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Int32, ffi.Pointer<ffi.Int8>)>>('sv_find_pattern');
  late final _sv_find_pattern = _sv_find_patternPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Int8>)>();

  int sv_get_pattern_x(
    int slot,
    int pat_num,
  ) {
    return _sv_get_pattern_x(
      slot,
      pat_num,
    );
  }
